--- a/mods/ts/tilesets/temperate.yaml
+++ b/mods/ts/tilesets/temperate.yaml
@@ -15704,19 +15704,19 @@ Templates:
 		Images: proad02.tem, proad02a.tem, proad02b.tem, proad02c.tem #prslpe04.tem
 		Size: 3, 1
 		Tiles:
-			0: DirtRoad
+			0: Road
 				RampType: 4
 				MinColor: 4F4B45
 				MaxColor: 3E3D3B
 				ZOffset: -12
 				ZRamp: 0
-			1: DirtRoad
+			1: Road
 				RampType: 4
 				MinColor: 3E3B34
 				MaxColor: 3C3B38
 				ZOffset: -12
 				ZRamp: 0
-			2: DirtRoad
+			2: Road
 				RampType: 4
 				MinColor: 3F3F3D
 				MaxColor: 4D4A45
