--- a/mods/ts/rules/nod-vehicles.yaml
+++ b/mods/ts/rules/nod-vehicles.yaml
@@ -110,7 +110,7 @@ TTNK:
 	Health:
 		HP: 35000
 	Armor:
-		Type: Light
+		Type: Heavy
 		RequiresCondition: undeployed
 	Armament@PRIMARY:
 		Weapon: 90mm
@@ -164,14 +164,16 @@ TTNK:
 		InitialFacing: 0
 		Offset: -20, -130, 74
 		RealignDelay: -1
+		RequiresCondition: deployed || preparing-undeploy
 		RealignWhenDisable: true
+		RealignBeforeDeploy: true
 	WithModelBarrel:
 		Armament: deployed
 		LocalOffset: 181,0,209
-		RequiresCondition: deployed
+		RequiresCondition: deployed || preparing-undeploy
 	WithModelTurret@deployed:
 		Turret: deployed
-		RequiresCondition: deployed
+		RequiresCondition: deployed || preparing-undeploy
 	AttackTurreted@deployed:
 		Voice: Attack
 		Armaments: deployed
@@ -186,6 +188,8 @@ TTNK:
 		LocalOffset: 543,0,209
 		RequiresCondition: !rank-elite
 		MuzzleSequence: muzzle
+		Recoil: 76
+		RecoilRecovery: 32
 	Armament@deployedElite:
 		Name: deployed
 		Turret: deployed
@@ -193,12 +197,17 @@ TTNK:
 		LocalOffset: 543,0,209
 		RequiresCondition: rank-elite
 		MuzzleSequence: muzzle
+		Recoil: 76
+		RecoilRecovery: 32
 	Armor@deployed:
 		Type: Concrete
 		RequiresCondition: deployed
 	DetectCloaked:
 		Range: 1c768
 		RequiresCondition: rank-elite
+	RangeMultiplier@deployed:
+		Modifier: 125
+		RequiresCondition: deployed
 	RenderDetectionCircle:
 	RevealOnFire:
 		ArmamentNames: primary, deployed
@@ -249,11 +258,20 @@ ART2:
 		UndeployedCondition: undeployed
 		UndeployOnMove: true
 		UndeployOnPickup: true
-		Facing: 384
+		Facing: -128
 		AllowedTerrainTypes: Clear, Road, DirtRoad, Rough
 		DeploySounds: place2.aud
 		UndeploySounds: clicky1.aud
 		Voice: Move
+		# DeployOnAiming: true
+	# AttackFrontal@todeploy:
+	# 	Voice: Attack
+	# 	FacingTolerance: 512
+	# 	RequiresCondition: undeployed
+	# Armament@todeploy:
+	# 	Name: todeploy
+	# 	Weapon: 155mmDeployCheck
+	# 	RequiresCondition: undeployed
 	EntersTunnels:
 		RequireForceMoveCondition: !undeployed
 	Repairable:
@@ -273,11 +291,26 @@ ART2:
 		Offset: 0,0,256
 		RealignDelay: -1
 		RealignWhenDisable: true
+		RequiresCondition: deployed || preparing-undeploy #!undeployed
+		RealignBeforeDeploy: true
+		DeployOnAiming: true
+	AttackFrontal@todeploy:
+		Voice: Attack
+		Armaments: todeploy
+		FacingTolerance: 512
+		RequiresCondition: undeployed
+	Armament@todeploy:
+		Name: todeploy
+		Weapon: 155mmDeployCheck
+		RequiresCondition: undeployed
+		FacingTolerance: 512
 	WithModelBarrel:
 		Armament: deployed
 		LocalOffset: 203,0,0
 		LocalOrientation: 0, 128, 0
 		RequiresCondition: !undeployed
+		RotationSpeed: 12
+		PackBarrelBeforeDeploy: true
 	WithModelTurret@deployed:
 		Turret: deployed
 		RequiresCondition: !undeployed
@@ -285,7 +318,7 @@ ART2:
 		Voice: Attack
 		Armaments: deployed
 		Turrets: deployed
-		RequiresCondition: deployed
+		RequiresCondition: deployed && !init-barrel
 		PauseOnCondition: empdisable
 		TargetFrozenActors: True
 		ForceFireIgnoresActors: True
@@ -294,9 +327,11 @@ ART2:
 		Name: deployed
 		Turret: deployed
 		Weapon: 155mm
-		LocalOffset: 820,0,800
-		RequiresCondition: deployed
+		LocalOffset: 1148,0,1120 #820,0,800
+		# RequiresCondition: deployed && !init-barrel
 		MuzzleSequence: muzzle
+		Recoil: 178
+		RecoilRecovery: 32
 	WithMuzzleOverlay:
 	RevealOnFire:
 		ArmamentNames: deployed
