--- a/mods/ts/rules/world.yaml
+++ b/mods/ts/rules/world.yaml
@@ -345,7 +345,7 @@ World:
 	MapOptions:
 		ShortGameCheckboxDisplayOrder: 2
 		TechLevelDropdownDisplayOrder: 2
-		GameSpeedDropdownDisplayOrder: 3
+		GameSpeedDropdownDisplayOrder: 1
 	CreateMapPlayers:
 	StartingUnits@MCV:
 		Class: none
@@ -403,7 +403,6 @@ World:
 	MapStartingLocations:
 		SeparateTeamSpawnsCheckboxDisplayOrder: 6
 	SpawnStartingUnits:
-		DropdownDisplayOrder: 1
 	CrateSpawner:
 		Minimum: 1
 		Maximum: 6
@@ -425,6 +424,7 @@ World:
 	ScriptTriggers:
 	CellTriggerOverlay:
 	TimeLimitManager:
+		TimeLimitDisplayOrder: 2
 	ColorPickerManager:
 		PreviewActor: harv.colorpicker
 		FactionPreviewActors:
