--- a/mods/ts/mod.yaml
+++ b/mods/ts/mod.yaml
@@ -57,12 +57,13 @@ Packages:
 	ts|materials
 	ts|textures
 	ts|skeletons
-
-	#ts|tstest
-	#ts|tstest/asset
-	#ts|tstest/asset/mat
-	#ts|tstest/asset/audios
-	#ts|tstest/asset/anims
+	ts|3dtest
+	
+	ts|tstest
+	ts|tstest/asset
+	ts|tstest/asset/mat
+	ts|tstest/asset/audios
+	ts|tstest/asset/anims
 
 
 
@@ -100,7 +101,7 @@ Rules:
 
 	ts|3dtest/testrulse.yaml
 
-	#ts|tstest/localtestrulse.yaml
+	ts|tstest/localtestrulse.yaml
 
 Weapons:
 	ts|weapons/ballisticweapons.yaml
@@ -113,7 +114,7 @@ Weapons:
 	ts|weapons/superweapons.yaml
 	ts|3dtest/weapons.yaml
 	
-	#ts|tstest/localtestweapon.yaml
+	ts|tstest/localtestweapon.yaml
 
 
 Sequences:
@@ -127,7 +128,7 @@ Sequences:
 	ts|sequences/bridges.yaml
 	ts|sequences/critters.yaml
 
-	#ts|tstest/localtestseq.yaml
+	ts|tstest/localtestseq.yaml
 
 ModelSequences:
 	ts|sequences/voxels.yaml
@@ -135,7 +136,7 @@ ModelSequences:
 MeshSequences:
 	ts|3dtest/meshes.yaml
 
-	#ts|tstest/localtestmes.yaml
+	ts|tstest/localtestmes.yaml
 
 TileSets:
 	ts|tilesets/temperate.yaml
@@ -220,7 +221,7 @@ Translations:
 Voices:
 	ts|audio/voices.yaml
 
-	#ts|tstest/localtestvoices.yaml
+	ts|tstest/localtestvoices.yaml
 
 
 Notifications:
@@ -300,7 +301,7 @@ SpriteFormats: ShpTS, TmpTS, ShpTD, PngSheet
 
 ModelFormats: Vxl
 
-MeshFormats: Mes
+MeshFormats: Mes, Mmr
 
 VideoFormats: Vqa
 
