--- a/mods/ts/mod.yaml
+++ b/mods/ts/mod.yaml
@@ -59,11 +59,11 @@ Packages:
 	ts|skeletons
 	ts|3dtest
 	
-	ts|tstest
-	ts|tstest/asset
-	ts|tstest/asset/mat
-	ts|tstest/asset/audios
-	ts|tstest/asset/anims
+	# ts|tstest
+	# ts|tstest/asset
+	# ts|tstest/asset/mat
+	# ts|tstest/asset/audios
+	# ts|tstest/asset/anims
 
 
 
@@ -101,7 +101,7 @@ Rules:
 
 	ts|3dtest/testrulse.yaml
 
-	ts|tstest/localtestrulse.yaml
+	# ts|tstest/localtestrulse.yaml
 
 Weapons:
 	ts|weapons/ballisticweapons.yaml
@@ -114,7 +114,7 @@ Weapons:
 	ts|weapons/superweapons.yaml
 	ts|3dtest/weapons.yaml
 	
-	ts|tstest/localtestweapon.yaml
+	# ts|tstest/localtestweapon.yaml
 
 
 Sequences:
@@ -128,7 +128,7 @@ Sequences:
 	ts|sequences/bridges.yaml
 	ts|sequences/critters.yaml
 
-	ts|tstest/localtestseq.yaml
+	# ts|tstest/localtestseq.yaml
 
 ModelSequences:
 	ts|sequences/voxels.yaml
@@ -136,7 +136,7 @@ ModelSequences:
 MeshSequences:
 	ts|3dtest/meshes.yaml
 
-	ts|tstest/localtestmes.yaml
+	# ts|tstest/localtestmes.yaml
 
 TileSets:
 	ts|tilesets/temperate.yaml
@@ -149,6 +149,10 @@ MapGrid:
 	MaximumTerrainHeight: 16
 	# SubCellOffsets: 0,0,0, -362,0,0, 0,362,0, 362,0,0
 	DefaultSubCell: 2
+
+WorldViewportSizes:
+	ZoomScale: 0.5
+	MaxZoomScale: 3
 
 Cursors:
 	ts|cursors.yaml
@@ -221,7 +225,7 @@ Translations:
 Voices:
 	ts|audio/voices.yaml
 
-	ts|tstest/localtestvoices.yaml
+	# ts|tstest/localtestvoices.yaml
 
 
 Notifications:
