--- a/mods/ts/3dtest/testrulse.yaml
+++ b/mods/ts/3dtest/testrulse.yaml
@@ -68,7 +68,7 @@ RUTEST:
 		Speed: 100
 		Locomotor: tracked
 		# AlwaysTurnInPlace: true
-		CanMoveBackward: true
+		# CanMoveBackward: true
 	Health:
 		HP: 100000
 	Armor:
@@ -77,45 +77,6 @@ RUTEST:
 		RequiresCondition: !inside-tunnel
 		Range: 15c0
 		MaxHeightDelta: 3
-	# AttackAttachmentTurreted:
-	# 	Turrets: turret1, turret2
-	# 	Voice: Attack
-	# WithSkeleton@turret1:
-	# 	SkeletonDefine: turret-test
-	# 	Name: turret_skeleton1
-	# TurretAttachment@1:
-	# 	Name: turret1
-	# 	SkeletonBinded: body
-	# 	AttachingBone: a-s-Rig_Hand.R
-	# 	AttachmentSkeleton: turret_skeleton1
-	# 	TurretBone: a-s-Base
-	# 	BarrelBone: a-s-Barrel
-	# 	Scale: 4
-	# 	Mesh: turret
-	# AttachedArmament@1:
-	# 	Weapon: ^SA
-	# 	SkeletonToUse: turret_skeleton1
-	# 	FromBonePose: firepose
-	# 	FacingTolerance: 40
-	# 	Turret: turret1
-	# WithSkeleton@turret2:
-	# 	SkeletonDefine: turret-test
-	# 	Name: turret_skeleton2
-	# TurretAttachment@2:
-	# 	Name: turret2
-	# 	SkeletonBinded: body
-	# 	AttachingBone: a-s-Rig_Hand.L
-	# 	AttachmentSkeleton: turret_skeleton2
-	# 	TurretBone: a-s-Base
-	# 	BarrelBone: a-s-Barrel
-	# 	Scale: 4
-	# 	Mesh: turret
-	# AttachedArmament@2:
-	# 	Weapon: ^SA
-	# 	SkeletonToUse: turret_skeleton2
-	# 	FromBonePose: firepose
-	# 	FacingTolerance: 40
-	# 	Turret: turret2
 	DamagedByTerrain@VEINS:
 		RequiresCondition: !inside-tunnel && !rank-elite
 	LeavesTrails@VEINS:
@@ -124,40 +85,37 @@ RUTEST:
 		QuantizedFacings: 0
 	RenderSprites:
 		Image: bike
+
+RUTEST2:
+	Inherits: RUTEST
+	Tooltip:
+		Name: Test 2
 	Armament:
-		Weapon: HoverMissileDual
+		Weapon: HoverMissile
 		Turret: primary
 		LocalOffset: 1024,0,1024
 	Turreted:
 		TurnSpeed: 88
 		Turret: primary
 		Offset: 0,0,0
-		# Floating: true
+		Floating: true
 	AttackTurreted:
 		Voice: Attack
 		PauseOnCondition: empdisable
 		# FacingToTarget: true
 	BlendTreeHandler:
 		DirectionTurret: primary
+	WithMesh@Arrow:
+		Mesh: arrow
 
-	RenderModels:
-		NormalsPalette: normals
-		ShadowPalette: shadow
-		Scale: 1.4
-		LightScale: 0.6
-		SpecularScale: 0.15
-		Image: bike
-	WithModelBody:
-
-
-RUTEST2:
+RUTEST3:
 	Inherits: RUTEST
 	RenderMeshes:
 		Image: rumya-2
 		ZOffset: 0
 		Scale: 15
 	Tooltip:
-		Name: Test 2
+		Name: Test 3
 	Health:
 		HP: 1500000
 	Mobile:
