RenderModels 支持 FactionImages 更新MCV模型

--- a/mods/ts/maps/sunstroke/rules.yaml
+++ b/mods/ts/maps/sunstroke/rules.yaml
@@ -29,8 +29,9 @@ World:
 		NormalsPalette: normals
 		ShadowPalette: shadow
 		Scale: 1.4
-		LightScale: 0.6
-		SpecularScale: 0.15
+		LightScale: 0.3
+		SpecularScale: 0.9
+		AmbientScale: 0.8
 	WithModelBody:
 
 GAOLDCC2:
