--- a/mods/ts/weapons/ballisticweapons.yaml
+++ b/mods/ts/weapons/ballisticweapons.yaml
@@ -73,8 +73,8 @@
 120mmx:
 	Inherits: ^Cannon
 	ReloadDelay: 80
-	Burst: 2
-	BurstDelays: 5
+	# Burst: 2
+	# BurstDelays: 5
 	Warhead@1Dam: SpreadDamage
 		Damage: 8000
 
